# python_console_tools

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: logging.dev.yaml
docs/: engineering-guidelines.md
skills/console-ux-style/: SKILL.md
skills/generate-docs/: SKILL.md
skills/principal-architect/: SKILL.md
skills/python-console-guidelines/: SKILL.md
src/python_console_tools/: __init__.py  __main__.py  cli.py  logging_setup.py  settings.py
src/python_console_tools/adapters/: auth0.py  local_server.py  pkce.py  token_store.py
src/python_console_tools/cli/: app.py  auth.py  data.py  geo.py  geoservice.py  menu.py  mosaic.py  seam.py
src/python_console_tools/core/: models.py
src/python_console_tools/geo/: __init__.py  handler.py
src/python_console_tools/seam/: dijkstra.py
src/python_console_tools/services/: auth_service.py  data_service.py  geoservice.py  mosaic_service.py  seam_service.py
tests/: test_cli.py  test_cli_auth.py  test_cli_menu.py
